--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,7 +29,8 @@ jobs:
       - run: pip install -e .
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
-      - run: python pdoc app/iLibrary/src
+      - run: pdoc -o docs app.iLibrary.src
+
 
       - uses: actions/upload-pages-artifact@v4
         with:
