--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,7 +29,7 @@ jobs:
       - run: pip install -r requirements.txt
       # ADJUST THIS: build your documentation into docs/.
       # We use a custom build script for pdoc itself, ideally you just run `pdoc -o docs/ ...` here.
-      - run: pdoc -o docs app.iLibrary.src
+      - run: python pdoc -o docs app.iLibrary.src
 
 
       - uses: actions/upload-pages-artifact@v4
